
PIG-2910: Add function to read schema from outout of Schema.toString() (initialcontext via thejas)

OPTIMIZATIONS

PIG-3395: Large filter expression makes Pig hang (cheolsoo)

PIG-3123: Simplify Logical Plans By Removing Unneccessary Identity Projections (njw45 via cheolsoo)

PIG-3013: BinInterSedes improve chararray sort performance (rohini)

BUG FIXES

PIG-3292: Logical plan invalid state: duplicate uid in schema during self-join to get cross product (cheolsoo via daijy)

PIG-3491: Fix e2e failure Jython_Diagnostics_4 (daijy)

PIG-3434: Null subexpression in bincond nullifies outer tuple (or bag) (mwagner via daijy)

PIG-3114: Duplicated macro name error when using pigunit (daijy)

PIG-3370: Add New Reserved Keywords To The Pig Docs (cheolsoo)

PIG-3487: Fix syntax errors in nightly.conf (arpitgupta via daijy)

PIG-3458: ScalarExpression lost with multiquery optimization (knoguchi)

PIG-3360: Some intermittent negative e2e tests fail on hadoop 2 (daijy)

PIG-3468: PIG-3123 breaks e2e test Jython_Diagnostics_2 (daijy)

PIG-3466: Race Conditions in InternalDistinctBag during proactive spill (cheolsoo)

PIG-3454: Update JsonLoader/JsonStorage (tyro89 via daijy)

PIG-3333: Fix remaining Windows core unit test failures (daijy)

PIG-3426: Add support for removing s3 files (jeremykarn via daijy)

PIG-3349: Document ToString(Datetime, String) UDF (cheolsoo)

PIG-3374: CASE and IN fail when expression includes dereferencing operator (cheolsoo)

PIG-2606: union/ join operations are not accepting same alias as multiple inputs (hsubramaniyan via daijy)

PIG-3379: Alias reuse in nested foreach causes PIG script to fail (xuefuz via daijy)

PIG-3432: typo in log message in SchemaTupleFrontend (epishkin via cheolsoo)

PIG-3410: LimitOptimizer is applied before PartitionFilterOptimizer (aniket486)

PIG-3405: Top UDF documentation indicates improper use (aniket486 via cheolsoo)

PIG-3425: Hive jdo api jar referenced in pig script throws error (deepesh via cheolsoo)
