@@ -27,6 +27,12 @@ chomp $me;
 # PH_PIG      	    Root directory for Pig version being used
 
 my $hdfsBase = $ENV{PH_HDFS_BASE} || "/user/pig";
+my $jythonjarpath;
+eval {$jythonjarpath = `ls /usr/lib/pig/lib/jython-*.jar`};
+chomp $jythonjarpath;
+my $jrubyjarpath;
+eval {$jrubyjarpath = `ls /usr/lib/pig/lib/jruby-*.jar`};
+chomp $jrubyjarpath;
 
 $cfg = {
     #HDFS
@@ -44,18 +50,18 @@ $cfg = {
     , 'benchmarkPath'    => "$ENV{PH_OUT}/benchmarks"
     , 'scriptPath'       => "$ENV{PH_ROOT}/libexec"
     , 'tmpPath'          => '/tmp/pigtest'
-    , 'jythonjar'        => "$ENV{PH_JYTHON_JAR}"
-    , 'jrubyjar'         => "$ENV{PH_JRUBY_JAR}"
+    , 'jythonjar'        => $jythonjarpath
+    , 'jrubyjar'         => $jrubyjarpath
 
     #PIG
     , 'testconfigpath'   => "$ENV{HADOOP_CONF_DIR}"
     , 'funcjarPath'      => "$ENV{PH_ROOT}/lib/java"
+    , 'piggybankjarPath' => "/usr/lib/pig"
     , 'paramPath'        => "$ENV{PH_ROOT}/paramfiles"
-    , 'piggybankjarPath' => "$ENV{PH_PIG}/contrib/piggybank/java"
-    , 'pigpath'          => "$ENV{PH_PIG}"
+    , 'piggybankjarPath' => "/usr/lib/pig"
+    , 'pigpath'          => "/usr"
     , 'oldpigpath'       => "$ENV{PH_OLDPIG}"
     , 'hcatbin'          => "$ENV{HCAT_BIN}"
-    , 'usePython'        => "$ENV{PIG_USE_PYTHON}"
     , 'exectype'         => 'mapred'
 
     #HADOOP
