@@ -205,7 +205,6 @@ store a into ':INPATH:/singlefile/fileexists';\,
                         d = foreach c generate flatten(org.apache.pig.test.udf.evalfunc.BadUdf(a,b));
                         store d into ':OUTPATH:';\,
 	    'expected_err_regex' => "Out of bounds access",
-            'expected_err_regex23' => "Unable to recreate exception",
             },
             {
             'num' => 2,
@@ -217,7 +216,6 @@ store a into ':INPATH:/singlefile/fileexists';\,
                         d = foreach c generate flatten(org.apache.pig.test.udf.evalfunc.BadUdf2(a,b));
                         store d into ':OUTPATH:';\,
             'expected_err_regex' => "Out of bounds access",
-            'expected_err_regex23' => "Unable to recreate exception",
             },
             {
             'num' => 3,
@@ -229,7 +227,6 @@ store a into ':INPATH:/singlefile/fileexists';\,
                         d = foreach c generate flatten(org.apache.pig.test.udf.evalfunc.BadUdf3(a,b));
                         store d into ':OUTPATH:';\,
             'expected_err_regex' => "Out of bounds access",
-            'expected_err_regex23' => "Unable to recreate exception",
             },
             {
             'num' => 4,
@@ -241,7 +238,6 @@ store a into ':INPATH:/singlefile/fileexists';\,
                         d = foreach c generate flatten(org.apache.pig.test.udf.evalfunc.BadUdf4(a,b));
                         store d into ':OUTPATH:';\,
             'expected_err_regex' => "ERROR 2078: .*",
-            'expected_err_regex23' => "Unable to recreate exception",
             },
         ]
         },
