@@ -4579,7 +4579,7 @@ store C into ':OUTPATH:';\,
                     # Simplest merge-sparse-join.
                     {
                         'num' => 1,
-                        'pig' => q\register :PIGPATH:/contrib/piggybank/java/piggybank.jar
+                        'pig' => q\register :PIGGYBANKPATH:/piggybank.jar
                                 a = load ':INPATH:/singlefile/studenttab10k';
                                 b = load ':INPATH:/singlefile/votertab10k';
                                 c = order a by $0;
@@ -4600,7 +4600,7 @@ store C into ':OUTPATH:';\,
                     # Merge-sparse-join with left-side filter
                     {
                         'num' => 2,
-                        'pig' => q\register :PIGPATH:/contrib/piggybank/java/piggybank.jar
+                        'pig' => q\register :PIGGYBANKPATH:/piggybank.jar
                                 a = load ':INPATH:/singlefile/studenttab10k';
                                 b = load ':INPATH:/singlefile/votertab10k';
                                 c = order a by $0;
@@ -4623,7 +4623,7 @@ store C into ':OUTPATH:';\,
                     # Merge-sparse-join with right-side filter
                     {
                         'num' => 3,
-                        'pig' => q\register :PIGPATH:/contrib/piggybank/java/piggybank.jar
+                        'pig' => q\register :PIGGYBANKPATH:/piggybank.jar
                                 a = load ':INPATH:/singlefile/studenttab10k';
                                 b = load ':INPATH:/singlefile/votertab10k';
                                 c = order a by $0;
@@ -4647,7 +4647,7 @@ store C into ':OUTPATH:';\,
                     # Merge-sparse-join with key as expression
                     {
                         'num' => 4,
-                        'pig' => q\register :PIGPATH:/contrib/piggybank/java/piggybank.jar
+                        'pig' => q\register :PIGGYBANKPATH:/piggybank.jar
                                 a = load ':INPATH:/singlefile/studenttab10k';
                                 b = load ':INPATH:/singlefile/votertab10k';
                                 c = order a by $0,$1;
@@ -4668,7 +4668,7 @@ store C into ':OUTPATH:';\,
                     # Merge-sparse-join with nulls in keys and data.
                     {
                         'num' => 5,
-                        'pig' => q\register :PIGPATH:/contrib/piggybank/java/piggybank.jar
+                        'pig' => q\register :PIGGYBANKPATH:/piggybank.jar
                                 a = load ':INPATH:/singlefile/studentnulltab10k';
                                 b = load ':INPATH:/singlefile/voternulltab10k';
                                 c = order a by $0;
@@ -4689,7 +4689,7 @@ store C into ':OUTPATH:';\,
                     # Merge-sparse-join with join on numeric key
                     {
                         'num' => 6,
-                        'pig' => q\register :PIGPATH:/contrib/piggybank/java/piggybank.jar
+                        'pig' => q\register :PIGGYBANKPATH:/piggybank.jar
                                 a = load ':INPATH:/singlefile/studenttab10k' as (name:chararray, age:int, gpa:float);
                                 b = load ':INPATH:/singlefile/votertab10k'as (name:chararray, age:int, reg:chararray, contrib:float);
                                 c = order a by age;
