@@ -239,6 +239,8 @@ PIG-3013: BinInterSedes improve chararray sort performance (rohini)
 
 BUG FIXES
 
+PIG-3494: Several fixes for e2e tests (daijy)
+
 PIG-3292: Logical plan invalid state: duplicate uid in schema during self-join to get cross product (cheolsoo via daijy)
 
 PIG-3491: Fix e2e failure Jython_Diagnostics_4 (daijy)
